  Bugfixes:
    - Fixed that the Quantum Bazaar tries to spill items on ground instead of limiting output if your inventory is full.
    - Fixed that the Quantum Bazaar wouldn't work in remote view.
    - Fixed that trade output stack size calculations did not consider trade productivity.
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 18/12/25
  Bugfixes:
    - Fixed that trade productivity updates didn't work on some planets.
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 18/12/25
  Bugfixes:
    - Fixed that trade productivity updates would overload on visiting new planets (causing lag).
    - Added missing "raw" items that bypass needing a recipe to determine whether it's been researched: calcite, four asteroid chunk types.
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 18/12/25
  Minor Features:
    - Notifications about extra trades (bronze star effect), interplanetary trades (silver star effect), and trade recovery (gold star effect) now also show the trade in the text.
  Balancing:
    - Trades that give items which are not yet produceable with a researched recipe now have a penalty to trade productivity. Can be tweaked or disabled in the mod settings.
    - Increased default mod settings for productivity rank-up requirements:
        Bronze -> Silver: 35%
        Silver -> Gold: 85%
        Gold -> Red: 130%
  Changes:
    - Changed that the bronze star "extra trade" effect to apply on ALL hex cores, not just ones that never had an extra trade given to it before.
    - Changed that the belt capacity tech from this mod doesn't consume promethium science packs.
    - Dungeon hexes with extra trades from the bronze effect no longer ping them in chat if they are in uncharted areas of the map.